[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://src/OptionsMenu.tscn" type="PackedScene" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuPrincipal" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -175.0
margin_right = 404.0
margin_bottom = 539.0
custom_constants/separation = 40
alignment = 1

[node name="Reprendre" type="Button" parent="MenuPrincipal"]
margin_top = 167.0
margin_right = 404.0
margin_bottom = 267.0
rect_min_size = Vector2( 0, 100 )
text = "Reprendre"

[node name="Opcions" type="Button" parent="MenuPrincipal"]
margin_top = 307.0
margin_right = 404.0
margin_bottom = 407.0
rect_min_size = Vector2( 0, 100 )
text = "Opcions"

[node name="Sortir" type="Button" parent="MenuPrincipal"]
margin_top = 447.0
margin_right = 404.0
margin_bottom = 547.0
rect_min_size = Vector2( 0, 100 )
text = "Sortir"

[node name="OptionsMenu" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="MenuPrincipal/Reprendre" to="." method="_on_Reprendre_pressed"]
[connection signal="pressed" from="MenuPrincipal/Opcions" to="." method="_on_Opcions_pressed"]
[connection signal="pressed" from="MenuPrincipal/Sortir" to="." method="_on_Sortir_pressed"]
